# Libraries

./: .gitignore
Prism/Exercises/: MVVM.vsdx
Prism/Exercises/Prism v5/PrismLibrary/: PrismLibrary_Desktop_V5.sln
Prism/Exercises/Prism v7.2.0/Source/: global.json
Prism/Exercises/Prism.v6.3.0/docs/: NuGet-Packages.md
Prism/Exercises/Prism4_Execises/P01HelloPrism4/: P01HelloPrism4.sln
Prism/Exercises/Prism4_Execises/P02MVVMBasics/: P02MVVMBasics.sln
Prism/Exercises/Prism4_Execises/P03Regions/: P03Regions.sln
Prism/Exercises/Prism4_Execises/P04CustomRegions/: P04CustomRegions.sln
Qt/: .gitignore
Qt/KDAB_QML_Intro/C01_Hello_QT/: CMakeLists.txt  Main.qml  main.cpp
Qt/KDAB_QML_Intro/C03_Elements/: CMakeLists.txt  Elements.qml  Main.qml  main.cpp
Qt/KDAB_QML_Intro/C04_Properties/: CMakeLists.txt  Identity.qml  Main.qml  main.cpp
Qt/KDAB_QML_Intro/C05_Exercises_Properties/: CMakeLists.txt  Main.qml  main.cpp
Qt/KDAB_QML_Intro/C06_Images/: CMakeLists.txt  Main.qml  main.cpp
Qt/Manage_Resources/: CMakeLists.txt  Main.qml  main.cpp
Qt/Manage_Resources/Bsc_Ui_Styles/: CMakeLists.txt  Resources.qrc  utilities.cpp  utilities.h
Qt/Manage_Resources/Bsc_Ui_Styles/colors/: GradientColors.qml  SolidColors.qml
Qt/Manage_Resources/Bsc_Ui_Styles/fonts/: Fonts.qml
Qt/Manage_Resources/Bsc_Ui_Styles/images/: Icons.qml
Qt/Qt6-Intermediate/: .gitignore  README.md
Qt/Qt6-Intermediate/C02/C0202ContextProperties/: CMakeLists.txt  Main.qml  cppworker.cpp  cppworker.h  main.cpp  other.qml
Qt/Qt6-Intermediate/C02/C0203Connections/: CMakeLists.txt  Main.qml  main.cpp
Qt/Qt6-Intermediate/C02/C0204CppSignal/: CMakeLists.txt  Main.qml  cppsignalsender.cpp  cppsignalsender.h  main.cpp
Qt/Qt6-Intermediate/C02/C0205QPropertiesMapping/: CMakeLists.txt  Main.qml  main.cpp  movie.cpp  movie.h
Qt/Qt6-Intermediate/C02/C0206ContextObjects/: CMakeLists.txt  Main.qml  main.cpp  propertywrapper.cpp  propertywrapper.h
Qt/Qt6-Intermediate/C02/C0207CallJsFromCpp/: CMakeLists.txt  Main.qml  main.cpp  qmljscaller.cpp  qmljscaller.h
Qt/Qt6-Intermediate/C02/C0208InstantiableObject/: CMakeLists.txt  Main.qml  main.cpp  movie.cpp  movie.h
Qt/Qt6-Intermediate/C02/C0209InstantiableModule/: CMakeLists.txt  Main.qml  main.cpp
Qt/Qt6-Intermediate/C02/C0210SingletonObject/: CMakeLists.txt  Main.qml  main.cpp  mysingleton.h
Qt/Qt6-QML/: .gitignore
Qt/Qt6-QML/C02/C0202BasicQmlSyntax/: CMakeLists.txt  Main.qml  main.cpp
Qt/Qt6-QML/C02/C0203BasicDataType/: CMakeLists.txt  Main.qml  main.cpp
Qt/Qt6-QML/C03/C0304Resources/: CMakeLists.txt  Main.qml  main.cpp
Qt/Qt6-QML/C04/C0402CustomComponents/: CMakeLists.txt  MButton.qml  Main.qml  main.cpp
Qt/Qt6-QML/C04/C0403CustomComponentInPlace/: CMakeLists.txt  Main.qml  main.cpp
Qt/Qt6-QML/C05/C0506AttachedSignalHandlers/: CMakeLists.txt  main.cpp
Qt/Qt6-QML/C05/C0508ConnectSignals/: CMakeLists.txt  Main.qml  main.cpp
Qt/Qt6-QML/C05/C0510SendSignalCrossComponents/: CMakeLists.txt  Main.qml  Notifier.qml  Receiver.qml  main.cpp
Qt/Qt6-QML/C06/C0602BetterTextInput/: CMakeLists.txt  LabeledTextInput.qml  Main.qml  main.cpp
Qt/Qt6-QML/C07/C0704ImportJS/: CMakeLists.txt  Main.qml  main.cpp  utilities1.js
Qt/Qt6-QML/C07/C0706QtInclude/: CMakeLists.txt  Main.qml  main.cpp  utility1.js
Qt/Qt6-QML/C09/C0910SwipeViewPageIndicator/: CMakeLists.txt  Main.qml  main.cpp
Qt/Qt6-QML/C12/C1205Behavior/: CMakeLists.txt  Main.qml  main.cpp
Qt/Qt6-QML/C12/C1207SpringAnimation/: CMakeLists.txt  Main.qml  main.cpp
Qt/Qt6-QML/C12/C1210EasingCurves/: CMakeLists.txt  Main.qml  MovingRectangle.qml  main.cpp
Qt/Qt6-QML/C12/C1213StatesTransitions/: CMakeLists.txt  Main.qml  main.cpp
Qt/Qt6-QML/C14/C1403SettingsCustom/: CMakeLists.txt  Main.qml  main.cpp
WPF/AppCodeMarkup/: AppsCodeMarkup.sln
WPF/AppCodeMarkup/C01_AppWin/: C01_AppWin.sln
WPF/AppCodeMarkup/C02_Brushes/: C02_Brushes.sln
WPF/AppCodeMarkup/C03_Contents/: C03_Contents.sln
WPF/AppCodeMarkup/C04_Buttons/: C04_Buttons.sln
WPF/AppCodeMarkup/C05_StackWrap/: C05_StackWrap.sln
WPF/AppCodeMarkup/C06_DockGrid/: C06_DockGrid.sln
WPF/AppCodeMarkup/C07_Canvas/: C07_Canvas.sln
WPF/AppCodeMarkup/C08_DependencyProperties/: C08_DependencyProperties.sln
WPF/AppCodeMarkup/C09_RoutedInputEvents/: C09_RoutedInputEvents.sln
WPF/AppCodeMarkup/C10_CustomElements/: C10_CustomElements.sln
WPF/AppCodeMarkup/C11_SingleChildElements/: C11_SingleChildElements.sln
WPF/AppCodeMarkup/C12_CustomPanels/: C12_CustomPanels.sln
WPF/AppCodeMarkup/C13_ListBoxSelection/: C13_ListBoxSelection.sln
WPF/AppCodeMarkup/C14_MenuHierarchy/: C14_MenuHierarchy.sln
WPF/AppCodeMarkup/C15_ToolbarStatusBar/: C15_ToolbarStatusBar.sln
WPF/AppCodeMarkup/C16_TreeViewListView/: C16_TreeViewListView.sln
WPF/AppCodeMarkup/C17_PrintingDialogBoxes/: C17_PrintingDialogBoxes.sln
WPF/AppCodeMarkup/C18_NotepadClone/: C18_NotepadClone.sln
WPF/AppCodeMarkup/C19_XAML/: C19_XAML.sln
WPF/Petzold3D/: .gitignore  Petzold3D.sln
WPF/WPFThemes/: .gitignore
WPF/WPFThemes/JinHu.WPF.Themes/: JinHu.WPF.Themes.sln
WPF/WPFThemes/StoreDatabase/: Category.cs  Product.cs  StoreDB.cs  StoreDatabase.csproj  StoreDbDataSet.cs  store.xsd  store.xss
WPF/WPFUnleashed/: README.md
WPF/WPFUnleashed/C02/: C02.sln
WPF/WPFUnleashed/C15/: C15.sln
Win32/MFC2/Chap01/: C01_HelloMFC.sln
Win32/MFC2/Chap02/: C02_Drawing.sln
Win32/MFC2/Chap03/: C03_KeyboardMouse.sln
Win32/MFC2/Chap04/: C04_Menu.sln
Win32/Petzold5/Chap01/: C01_HelloMsg.sln
Win32/Petzold5/Chap02/: C02_ScrnSize.sln
Win32/Petzold5/Chap03/: C03_HelloWin.sln
Win32/Petzold5/Chap04/: C04_SystemMeters.sln
Win32/Petzold5/Chap05/: C05_BasicDraw.sln
Win32/Petzold5/Chap06/: C06_Keyboard.sln
Win32/Petzold5/Chap07/: C07_Mouse.sln
Win32/Petzold5/Chap08/: C08_Timer.sln
Win32/Petzold5/Chap09/: C09_ChildWindowControls.sln
Win32/Petzold5/Chap10/: C10_Menus.sln
Win32/Petzold5/Chap11/: C11_Dialogs.sln
Win32/Petzold5/Chap12/: C12_Clipboard.sln
Win32/Petzold5/Chap13/: C13_Printer.sln
Win32/ProgrammingDirectX12/: ProgrammingDirectX12.sln  README.md
(+1360 files in other folders)
